[package]
name = "laika"
version = "0.1.0"
authors = ["Chris Patuzzo <chris@patuzzo.co.uk>"]

[dependencies]
rand = { version = "0.5.4", features = ["stdweb"] }
stdweb = "0.4.8"
stdweb-derive = "0.4.0"
serde = "1.0.71"
serde_derive = "1.0.71"

[build-dependencies]
webgl_generator = "0.1.0"

[dev-dependencies]
assert_approx_eq = "1.0.0"
